# diplomatik

./: .dockerignore  CONTRIBUTING.md  README.md  _config.yaml  logging_config.py  pyproject.toml  settings.py
.github/workflows/: pages.yml
deployment/docker/demo/: docker-compose.yml
deployment/docker/dev/: docker-compose.yml
deployment/docker/prod/: Dockerfile  README.md  docker-compose.yml
diplomatik/: __init__.py
diplomatik/data_engine/data_engine_api/: data_engine_api.py  data_engine_factory.py  data_source_connector.py  query_component.py
diplomatik/data_engine/data_engine_impl/: data_engine_impl.py
diplomatik/data_model/: data_source_connection.py  data_source_type.py  dataframe_config.py  query_component.py
diplomatik/data_model/aggregation/: aggregation.py  average_aggregation.py  count_aggregation.py  max_aggregation.py  min_aggregation.py  select_aggregation.py  sum_aggregation.py
diplomatik/data_model/filter/: and_filter.py  bound_filter.py  equals_filter.py  filter.py  filter_union_type.py  in_filter.py  in_subselect_filter.py  like_filter.py  nested_filters.py  null_check_filter.py  or_filter.py
diplomatik/data_model/query/: aggregate_query.py  batch_execution_status.py  batch_query.py  column.py  data_source_management_query.py  delete_query.py  (+15 more)
diplomatik/exceptions/: exceptions.py
diplomatik/tests/: README.md  test_utils.py
diplomatik/utils/: time_utils.py
docs/: README.md  _config.yml  api_reference.md  concepts.md  configuration.md  datasources.md  deployment.md  get_started.md  index.md  intro.md
docs/examples/: examples.md
(+106 files in other folders)
